--- a/dev_scripts/Procfile
+++ b/dev_scripts/Procfile
@@ -1,6 +1,7 @@
 # loop: ruby sleep_loop.rb 5
 # listen: sleep 3 && ncat -k -l 10001
+listen: ncat -k -l 10001
 # slow_echo: sleep 10 && ruby echo_server.rb
 # echo: ruby echo_server.rb
-sleep: sleep 30
-# stubborn: ruby stubborn.rb
+# sleep: sleep 30
+stubborn: ruby stubborn.rb
