Rework orphan cleanup
Because "reap orphans" is such a terrible and hilarious thing to put in code.
Oh, Unix, never stop.

* Change child pid list calculation to only pull the system process table once
* Reap children both after a failed shutdown of the master process and after a
  normal shutdown, since both cases can leave orphans
* Add test script for creating orphans
* Log orphaned processes as an error

--- a/dev_scripts/Procfile
+++ b/dev_scripts/Procfile
@@ -4,4 +4,5 @@ listen: ncat -k -l 10001
 # slow_echo: sleep 10 && ruby echo_server.rb
 # echo: ruby echo_server.rb
 # sleep: sleep 30
-stubborn: ruby stubborn.rb
+# stubborn: ruby stubborn.rb
+orphans: ruby bad_parent.rb
