--- a/dev_scripts/test.yml
+++ b/dev_scripts/test.yml
@@ -2,9 +2,10 @@
 test:
   dir: "./dev_scripts"
   # command: "ncat -k -l 10001"
-  command: "bundle exec foreman start 2>&1 | tee fail.log"
+  command: "bundle exec foreman start"
   # command: sleep 10
   server_port: 10000
   app_port: 10001
-  idle_timeout: 10
+  idle_timeout: 5
   startup_timeout: 5
+  kill_with: "INT"
